--- a/التمرين_اليوم_الرابع.md
+++ b/التمرين_اليوم_الرابع.md
@@ -2,7 +2,7 @@
 
 
 
-Create a controller called welcomeController with the following endpoints
+Create a controller called welcome  with the following endpoints
 
 - GET /hey : returns “Hey from express” 
 - GET /bye : returns “Bye” GET /check/status : returns “Everything OK” 
@@ -17,7 +17,7 @@ Create a controller called welcomeController with the following endpoints
 
 Create Person project. that takes input from the user and return the result 
 
-Create a controller called PeopleController with the following endpoints
+Create a controller called People with the following endpoints
 
 - GET /name : returns all names
 - POST /name : posts new name
@@ -30,7 +30,7 @@ Create a controller called PeopleController with the following endpoints
 
 Create grades project. that takes input from the user and return the result 
 
-Create a controller called GradeController with the following endpoints
+Create a controller called Grade with the following endpoints
 
 - GET /grade : returns all grades
 - POST /grade : posts new grade
