--- a/التمرين_اليوم_الرابع.md
+++ b/التمرين_اليوم_الرابع.md
@@ -5,7 +5,7 @@
 
 
 
-
+## التمرين الاول 
 
 
 Create Person project. that takes input from the user and return the result 
@@ -29,3 +29,21 @@ Create a controller called Grade with the following endpoints
 - POST /grade : posts new grade
 - PUT /grade : updates grade
 - DELETE/grade : deletes grade
+
+## التمرين الثاني 
+
+
+Create Task tracker system ,
+Where you can get all the taks  , add , remove , update  taks
+
+Task Class :
+ID , title , description  , status 
+
+
+- Create a new taks (title , description , status , deadline)
+- Display all tasks .
+- Update a task
+- Delete a task
+- Change the task status as done or not done
+- Search for a task by given title
+----------
