--- a/التمرين_اليوم_الرابع.md
+++ b/التمرين_اليوم_الرابع.md
@@ -36,7 +36,7 @@ Create a controller called Grade with the following endpoints
 Create Task tracker system ,
 Where you can get all the taks  , add , remove , update  taks
 
-Task Class :
+Task  :
 ID , title , description  , status 
 
 
