--- a/التمرين_اليوم_الرابع.md
+++ b/التمرين_اليوم_الرابع.md
@@ -10,7 +10,7 @@
 
 Create Person project. that takes input from the user and return the result 
 
-Create a controller called People with the following endpoints
+Create a controller called "People" with the following points
 
 - GET /name : returns all names
 - POST /name : posts new name
@@ -23,7 +23,7 @@ Create a controller called People with the following endpoints
 
 Create grades project. that takes input from the user and return the result 
 
-Create a controller called Grade with the following endpoints
+Create a controller called "Grade" with the following points
 
 - GET /grade : returns all grades
 - POST /grade : posts new grade
